--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
 
 <body>
 
+    <!-- Site Header -->
+    <header>
+
+    </header>
+    <!-- /Site Header -->
+
+    <!-- Site Main -->
+    <main>
+
+
+    </main>
+    <!-- /Site Main -->
+
+    <!-- Site Footer -->
+    <footer>
+
+    </footer>
+    <!-- /Site Footer -->
+
 </body>
 
 </html>
