--- a/index.html
+++ b/index.html
@@ -19,7 +19,39 @@
 <body>
 
     <!-- Site Header -->
-    <header>
+    <header id="site_header" class="bg_blue">
+        <nav class="container clearfix">
+
+            <div class="logo">
+                <img src="./assets/img/logo.svg" alt="Logo Fluentify">
+            </div>
+
+            <div class="left_menu">
+                <ul>
+                    <li><a href="#">il metodo</a></li>
+                    <li><a href="#">la tecnologia</a></li>
+                    <li><a href="#">real-life english</a></li>
+                    <li><a href="#">soluzioni aziendali</a></li>
+                </ul>
+            </div>
+
+            <div class="right_menu">
+                <ul>
+                    <li><a href="#">diventa un tutor</a></li>
+                    <li><a href="#" class="btn btn_outline">login</a></li>
+                    <li><a href="#" class="btn btn_solid">struttura un piano</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <section class="container">
+            <div class="header_text">
+                <h2>Scegli l'inglese studiato per i professionisti</h2>
+                <a href="#" class="btn_solid">struttura un piano</a>
+            </div>
+
+
+        </section>
 
     </header>
     <!-- /Site Header -->
