Complete top text main

--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
     <header id="site_header" class="bg_blue">
         <nav class="container clearfix">
 
+            <!-- Logo -->
             <div class="logo">
                 <img src="./assets/img/logo.svg" alt="Logo Fluentify">
             </div>
+            <!-- /Logo -->
 
+            <!-- Left Menu -->
             <div class="left_menu">
                 <ul>
                     <li><a href="#">il metodo</a></li>
@@ -34,7 +37,9 @@
                     <li><a href="#">soluzioni aziendali</a></li>
                 </ul>
             </div>
+            <!-- /Left Menu -->
 
+            <!-- Right Menu -->
             <div class="right_menu">
                 <ul>
                     <li><a href="#">diventa un tutor</a></li>
@@ -42,23 +47,30 @@
                     <li><a href="#" class="btn btn_solid">struttura un piano</a></li>
                 </ul>
             </div>
+            <!-- /Right Menu -->
         </nav>
 
+        <!-- Header Text -->
         <section class="container">
             <div class="header_text">
                 <h2>Scegli l'inglese studiato per i professionisti</h2>
                 <a href="#" class="btn_solid">struttura un piano</a>
             </div>
-
-
         </section>
+        <!-- /Header Text -->
 
     </header>
     <!-- /Site Header -->
 
     <!-- Site Main -->
-    <main>
+    <main id="site_main">
+        <section class="mid_cont">
+            <div class="container">
+                <h2>Le scuole di lingua tradizionali non sono efficaci</h2>
+                <h3>Solo un corso incentrato sulla Fluency può portare ad una soluzione definitiva concreta.</h3>
+            </div>
 
+        </section>
 
     </main>
     <!-- /Site Main -->
