--- a/index.html
+++ b/index.html
@@ -64,13 +64,56 @@
 
     <!-- Site Main -->
     <main id="site_main">
-        <section class="mid_cont">
+
+        <!-- Main - Top Content -->
+        <section class="top_container bg_grey">
             <div class="container">
                 <h2>Le scuole di lingua tradizionali non sono efficaci</h2>
-                <h3>Solo un corso incentrato sulla Fluency può portare ad una soluzione definitiva concreta.</h3>
+                <h3 class="txt_grey">
+                    Solo un corso incentrato sulla Fluency può portare ad una soluzione definitiva
+                    concreta.
+                </h3>
+            </div>
+        </section>
+        <!-- /Main - Top Content -->
+
+        <!-- Main Content -->
+        <div class="container clearfix">
+            <div class="left_content ">
+                <div class="img">
+                    <img src="./assets/img/profile.svg" alt="">
+                </div>
+                <div class="txt_content">
+                    <h3 class="txt_green">
+                        Piano formativo configurato sul proprio livello
+                    </h3>
+                    <p class="txt_grey">
+                        Un metodo improntato sullo speaking con
+                        percorsi basati esattamente sulle esigenze
+                        personali dei partecipanti. Tutto parte da un
+                        accurato test di partenza per definire il
+                        livello e impostare gli obiettivi da
+                        raggiungere.
+                    </p>
+                </div>
+
             </div>
 
-        </section>
+            <div class="mid_content ">
+
+
+            </div>
+
+            <div class="right_content ">
+
+            </div>
+
+
+        </div>
+
+        <!-- /Main Content -->
+
+
 
     </main>
     <!-- /Site Main -->
