Complete left, mid, right image

--- a/index.html
+++ b/index.html
@@ -80,9 +80,14 @@
         <!-- Main Content -->
         <div class="container clearfix">
             <div class="left_content ">
-                <div class="img">
-                    <img src="./assets/img/profile.svg" alt="">
+
+                <!-- Immagine -->
+                <div class="img_container">
+                    <img class="image" src="./assets/img/profile.svg" alt="">
                 </div>
+                <!-- /Immagine -->
+
+                <!-- Testo -->
                 <div class="txt_content">
                     <h3 class="txt_green">
                         Piano formativo configurato sul proprio livello
@@ -96,15 +101,52 @@
                         raggiungere.
                     </p>
                 </div>
+                <!-- /Testo -->
 
             </div>
 
             <div class="mid_content ">
 
+                <!-- Immagine -->
+                <div class="mid_img_container">
+                    <img class="image" src="./assets/img/computer.svg" alt="">
+                </div>
+                <!-- /Immagine -->
+
+                <!-- Testo -->
+                <div class="txt_content">
+                    <h3 class="txt_green">
+                        Affiancamento costante del tutor
+                    </h3>
+                    <p class="txt_grey">
+                        Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomemnti per passare al livello
+                        successivo e affrontarli con i tutor nelle sessioni one-to-one
+                    </p>
+                </div>
+                <!-- /Testo -->
+
 
             </div>
 
             <div class="right_content ">
+
+                <!-- Immagine -->
+                <div class="img_container">
+                    <img class="image" src="./assets/img/doc.svg" alt="">
+                </div>
+                <!-- /Immagine -->
+
+                <!-- Testo -->
+                <div class="txt_content">
+                    <h3 class="txt_green">
+                        Monitora i tuoi progressi costantemente
+                    </h3>
+                    <p class="txt_grey">
+                        Controlla i tuoi progressi con i dati elaborati del nostro sistema. Hai il pieno controllo su
+                        miglioramenti e obbiettivi raggiunti.
+                    </p>
+                </div>
+                <!-- /Testo -->
 
             </div>
 
