Complete mountain image

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
         <!-- /Main - Top Content -->
 
         <!-- Main Content -->
-        <div class="container clearfix">
+        <section class="container clearfix">
+
+            <!-- LEFT -->
             <div class="left_content ">
 
                 <!-- Immagine -->
-                <div class="img_container">
-                    <img class="image" src="./assets/img/profile.svg" alt="">
-                </div>
+                <div class="img_container image_left"></div>
                 <!-- /Immagine -->
 
                 <!-- Testo -->
@@ -102,15 +102,14 @@
                     </p>
                 </div>
                 <!-- /Testo -->
-
             </div>
+            <!-- /LEFT -->
 
+            <!-- MID -->
             <div class="mid_content ">
 
                 <!-- Immagine -->
-                <div class="mid_img_container">
-                    <img class="image" src="./assets/img/computer.svg" alt="">
-                </div>
+                <div class="img_container image_mid"></div>
                 <!-- /Immagine -->
 
                 <!-- Testo -->
@@ -124,16 +123,14 @@
                     </p>
                 </div>
                 <!-- /Testo -->
-
-
             </div>
+            <!-- /MID -->
 
+            <!-- RIGHT -->
             <div class="right_content ">
 
                 <!-- Immagine -->
-                <div class="img_container">
-                    <img class="image" src="./assets/img/doc.svg" alt="">
-                </div>
+                <div class="img_container image_right"></div>
                 <!-- /Immagine -->
 
                 <!-- Testo -->
@@ -147,12 +144,29 @@
                     </p>
                 </div>
                 <!-- /Testo -->
+            </div>
+            <!-- /RIGHT -->
+        </section>
+
+        <hr>
+
+        <section class="container clearfix">
+
+            <div class="content">
+
+                <div class="left mountain_img"></div>
+
+                <div class="right">
+                    <h3>Scopri il tuo livello iniziale e struttura un piano personalizzato</h3>
+                    <p>
+                        L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo
+                        inglese, ad oggi.
+                    </p>
+                </div>
 
             </div>
 
-
-        </div>
-
+        </section>
         <!-- /Main Content -->
 
 
