Complete mountain img section

--- a/index.html
+++ b/index.html
@@ -150,21 +150,25 @@
 
         <hr>
 
-        <section class="container clearfix">
-
-            <div class="content">
-
-                <div class="left mountain_img"></div>
-
-                <div class="right">
+        <section class="container">
+            <div class="row clearfix">
+                <div class="col-2">
+                    <img class="mountain" src="./assets/img/mountain.svg" alt="">
+                </div>
+                <div class="col-2">
                     <h3>Scopri il tuo livello iniziale e struttura un piano personalizzato</h3>
-                    <p>
+                    <p class="txt_grey">
                         L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo
                         inglese, ad oggi.
                     </p>
+                    <a href="#">Scopri il nostro test di placement</a>
                 </div>
-
             </div>
+        </section>
+
+        <section class="container clearfix">
+
+
 
         </section>
         <!-- /Main Content -->
